--- a/project draft 1/Main/SignUp/SignUpStoryboard.storyboard
+++ b/project draft 1/Main/SignUp/SignUpStoryboard.storyboard
@@ -9,6 +9,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Storyboard Reference-->
+        <scene sceneID="SxS-pa-qNR">
+            <objects>
+                <viewControllerPlaceholder id="fjG-64-Lbt" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bo3-GH-ic0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-253" y="36"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="4BZ-1V-Ima">
             <objects>
