--- a/project draft 1/Main/Home/HomeStoryboard.storyboard
+++ b/project draft 1/Main/Home/HomeStoryboard.storyboard
@@ -8,6 +8,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Storyboard Reference-->
+        <scene sceneID="r2M-rQ-hE5">
+            <objects>
+                <viewControllerPlaceholder id="f6l-RA-wqV" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dm1-V2-Qyi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-596" y="29"/>
+        </scene>
         <!--Home View Controller-->
         <scene sceneID="z70-M9-8Z1">
             <objects>
@@ -15,15 +23,6 @@
                     <view key="view" contentMode="scaleToFill" id="rYn-95-3Ew">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DOt-Op-kP8">
-                                <rect key="frame" x="177" y="273" width="39" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="J8H-7W-NCI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
