--- a/project draft 1/Main/Welcome/WelcomeStoryboard.storyboard
+++ b/project draft 1/Main/Welcome/WelcomeStoryboard.storyboard
@@ -9,10 +9,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Storyboard Reference-->
+        <!--LogInStoryboard-->
         <scene sceneID="dGw-Ha-bbk">
             <objects>
-                <viewControllerPlaceholder id="h6R-w6-Nfa" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="LogInStoryboard" referencedIdentifier="LogInStoryboard" id="h6R-w6-Nfa" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="CgS-i2-tm9"/>
+                </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kkP-o3-RTM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-495" y="26"/>
@@ -39,6 +41,9 @@
                                 <state key="normal" title="Log in now">
                                     <color key="titleColor" name="red"/>
                                 </state>
+                                <connections>
+                                    <segue destination="h6R-w6-Nfa" kind="show" id="vOF-HH-4CK"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dCo-1y-xUO">
                                 <rect key="frame" x="171" y="648" width="76" height="39"/>
